--- a/Spring/Photostagram/src/main/resources/templates/layout/layout.html
+++ b/Spring/Photostagram/src/main/resources/templates/layout/layout.html
@@ -28,6 +28,7 @@
 
   <link rel="stylesheet" th:href="@{/css/aside.css]" />
   <link rel="stylesheet" th:href="@{/css/profile.css}">
+  <link rel="stylesheet" th:href="@{/css/profileModify.css}">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <script th:src="@{/js/aside.js}"></script>
   <script th:src="@{/js/index.js}"></script>
