--- a/Spring/Photostagram/src/main/resources/templates/main.html
+++ b/Spring/Photostagram/src/main/resources/templates/main.html
@@ -27,6 +27,55 @@
     <link rel="stylesheet" href="./css/aside.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script th:src="@{/js/aside.js}"></script>
+    <script>
+       $(function(){
+        //게시글 업로드 버튼 클릭시(ajax추가하면 됨)
+        $('#button_write_feed').on('click', ()=>{
+          let inputFile = $('#file_upload');
+          let files = inputFile[0].files;
+
+          console.log(files);
+
+          let dataTransfer = new DataTransfer();
+          let fileArray = Array.from(files);
+          console.log('fileArray : ' +fileArray);
+
+          fileArray.forEach(f => {
+              dataTransfer.items.add(f);
+          });
+
+          let images= dataTransfer.files;
+          let urls = [];
+          for(i=0; i<images.length; i++){
+            let url = window.URL.createObjectURL(images[i]);
+            urls.push(url);
+          }
+          console.log('urls : ' +urls);
+
+          let content = $('#input_content').val();
+          let user_no = $('#input_user_id').data('no');
+          console.log('content : '+content);
+          console.log('user_no : '+user_no);
+/*
+          let fd = new FormData();
+          fd.append('image');
+
+
+          $.ajax({
+            url:'/Photostagram/postUpload',
+            processData: false,
+            contentType: false,
+            method:'POST',
+            data:formData,
+            dataType:'json',
+            success:function(data){
+
+            }
+          });
+          */
+        });
+      });
+    </script>
   </head>
 
   <body>
@@ -1108,7 +1157,7 @@
             <div class="profile_box">
               <img id="input_profile_image" class="profile_img" src="https://scontent-ssn1-1.xx.fbcdn.net/v/t1.6435-9/s1080x2048/165180104_277246477102900_6106347261862438192_n.jpg?_nc_cat=102&ccb=1-5&_nc_sid=730e14&_nc_ohc=1sN4d8i7rn8AX-7aKYN&_nc_ht=scontent-ssn1-1.xx&oh=5049b7cd176848e330b0f5ea95f28172&oe=615A08D1">
             </div>
-            <span id="input_user_id" class="feed_name_txt"> jin.99 </span>
+            <span id="input_user_id" class="feed_name_txt" data-no="1">coding0818</span>
           </div>
           <div style="height: 440px">
             <textarea id="input_content" class="feed_content_textarea form-control col-sm-5" rows="10" placeholder="설명을 입력하세요..."></textarea>
