--- a/Spring/Photostagram/src/main/resources/templates/layout/layout.html
+++ b/Spring/Photostagram/src/main/resources/templates/layout/layout.html
@@ -17,6 +17,9 @@
   <link rel="stylesheet" th:href="@{/css/common.css}" />
   <link rel="stylesheet" th:href="@{/css/reset.css}" />
   <link rel="stylesheet" th:href="@{/css/style.css}" />
+  <link rel="stylesheet" th:href="@{/css/aside.css}" />
+  <link rel="stylesheet" th:href="@{/css/profile.css}">
+  <link rel="stylesheet" th:href="@{/css/profileModify.css}">
   <link
           rel="stylesheet"
           href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
@@ -25,24 +28,19 @@
           href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
           rel="stylesheet"
   />
-
-  <link rel="stylesheet" th:href="@{/css/aside.css]" />
-  <link rel="stylesheet" th:href="@{/css/profile.css}">
-  <link rel="stylesheet" th:href="@{/css/profileModify.css}">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <script th:src="@{/js/aside.js}"></script>
   <script th:src="@{/js/index.js}"></script>
   <script th:src="@{/js/proFollow.js}"></script>
 </head>
-<body>
-<div id="wrapper">
-  <th:block th:replace="fragments/_header::main_header"></th:block>
-  <main>
-    <th:block th:replace="fragments/_aside::main_aside"></th:block>
-    <th:block layout:fragment="main"></th:block>
-  </main>
-</div>
-<th:block th:replace="fragments/_footer::main_footer"></th:block>
-</body>
+
+  <body>
+    <!--  <th:block th:replace="fragments/_header::main_header"></th:block>-->
+        <th:block th:replace="~{fragments/_aside::asideFragment}"></th:block>
+        <th:block layout:fragment="main"></th:block>
+        <th:block th:replace="~{fragments/_footer::main_footer}"></th:block>
+  </body>
+<th:block th:replace="~{fragments/_modal::modalFragment}"></th:block>
 <th:block layout:fragment="script"></th:block>
+
 </html>
