--- a/Spring/Photostagram/src/main/resources/templates/css/style.css
+++ b/Spring/Photostagram/src/main/resources/templates/css/style.css
@@ -1,4 +1,4 @@
-.m_text {
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>.m_text {
   font-size: 14px;
   font-weight: bold;
 }
