--- a/Spring/Photostagram/src/main/resources/templates/main.html
+++ b/Spring/Photostagram/src/main/resources/templates/main.html
@@ -26,60 +26,7 @@
     />
     <link rel="stylesheet" href="./css/aside.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script th:src="@{/js/aside.js}"></script>
-    <script>
-       $(function(){
-        //게시글 업로드 버튼 클릭시(ajax추가하면 됨)
-        $('#button_write_feed').on('click', ()=>{
-          let inputFile = $('#file_upload');
-          let files = inputFile[0].files;
-
-          console.log(files);
-
-          let dataTransfer = new DataTransfer();
-          let fileArray = Array.from(files);
-          console.log('fileArray : ' +fileArray);
-
-          fileArray.forEach(f => {
-              dataTransfer.items.add(f);
-          });
-
-          let images= dataTransfer.files;
-          let urls = [];
-          for(i=0; i<images.length; i++){
-            let url = window.URL.createObjectURL(images[i]);
-            urls.push(url);
-          }
-          console.log('urls : ' +urls);
-
-          let content = $('#input_content').val();
-          let user_no = $('#input_user_id').data('no');
-          console.log('content : '+content);
-          console.log('user_no : '+user_no);
-
-          let formData = new FormData();
-          for(j=0; j<images.length; j++){
-            formData.append('files', files[j]);
-          }
-          formData.append('urls', urls);
-          formData.append('content', content);
-          formData.append('user_no', user_no);
-
-          $.ajax({
-            url:'/Photostagram/postUpload',
-            processData: false,
-            contentType: false,
-            method:'POST',
-            data:formData,
-            dataType:'json',
-            success:function(data){
-
-            }
-          });
-
-        });
-      });
-    </script>
+    <script th:src="@{/js/aside.js?v=1}"></script>
   </head>
 
   <body>
