--- a/Spring/Photostagram/src/main/resources/templates/member/birth.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/birth.html
@@ -1,17 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photostagram::birth</title>
-    <link rel="shortcut icon" href="./images/favicon.png" type="image/png">
-    <!-- 구글 폰트 -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/member.css">
-</head>
-<body>
+<html  xmlns:th="http://www.thymeleaf.org"
+       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+       layout:decorate="layout/memberLayout">
+<th:block layout:fragment="main">
 <main class="member">
     <div class="container">
         <div class="main-container">
@@ -19,7 +10,7 @@
                 <div class="form-container">
                     <div class="form-content box">
                         <div class="birth-logo">
-                            <img src="./images/birthday-cake.png" alt="Instagram logo" class="logo-light">
+                            <img th:src="@{/img/birthday-cake.png}" alt="Instagram logo" class="logo-light">
                         </div>
                         <div class="signin-form-reg" id="signin-form">
                             <div class="birth">
@@ -29,11 +20,12 @@
                                     <a href="#">왜 생일 정보를 입력해야하나요?</a>
                                 </div>
                             </div>
-                            <form action="#">
+                            <form th:action="@{/member/birth}" method="post">
+
                                 <div class="info" id="info__birth">
-                                    <select class="box" id="select_year" onchange="javascript:lastday();"></select>
-                                    <select class="box" id="select_month" onchange="javascript:lastday();"></select>
-                                    <select class="box" id="select_day"></select>
+                                    <select class="box" name="year" id="select_year" onchange="javascript:lastday();"></select>
+                                    <select class="box" name="month" id="select_month" onchange="javascript:lastday();"></select>
+                                    <select class="box" name="day" id="select_day"></select>
                                 </div>
                                 <div class="birth2">
                                     <div>
@@ -44,14 +36,14 @@
                                     </div>
                                 </div>
                                 <div class="btn-group">
-                                    <button type="submit" class="btn-login" id="signin-btn" onclick="location.href='/member/email'">
+                                    <button type="submit" class="btn-login" id="signin-btn">
                                         다음
                                     </button>
                                 </div>
                             </form>     
                             <div class="birth">
                                 <div>
-                                    <a href="./register.html">돌아가기</a>
+                                    <a th:href="@{/member/register}">돌아가기</a>
                                 </div>
                             </div>                     
                         </div>
@@ -59,7 +51,7 @@
                     <div class="box goto">
                         <p>
                             계정이 있으신가요?
-                            <a href="./login.html">로그인</a>
+                            <a th:href="@{/member/login}">로그인</a>
                         </p>
                     </div>
 
@@ -67,40 +59,15 @@
                         <p>앱을 다운로드 하세요.</p>
                         <div class="store-link">
                             <a href="#">
-                                <img src="./images/appDownload.png" alt="app store">
+                                <img th:src="@{/img/appDownload.png}" alt="app store">
                             </a>
                             <a href="#">
-                                <img src="./images/googlePlay.png" alt="google play">
+                                <img th:src="@{/img/googlePlay.png}" alt="google play">
                             </a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="footer">
-            <div class="links">
-                <a href="#">Meta</a>
-                <a href="#">소개</a>
-                <a href="#">블로그</a>
-                <a href="#">채용정보</a>
-                <a href="#">도움말</a>
-                <a href="#">API</a>
-                <a href="#">개인정보처리방침</a>
-                <a href="#">약관</a>
-                <a href="#">인기 계정</a>
-                <a href="#">위치</a>
-                <a href="#">Instagram Lite</a>
-                <a href="#">연락처 업로드 & 비사용자</a>
-                <a href="#">Meta verified</a>
-                <a href="#" id="darkmode-toggle">Darkmode</a>
-            </div>
-            <div class="copyright">
-                © 2023 Instagram from Meta
-            </div>
-        </div>
-    </div>
-    </main>
-    <!-- APP JS -->
-    <script src="./js/member.js"></script>
-</body>
+</th:block>
 </html>
