--- a/Spring/Photostagram/src/main/resources/templates/member/login.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/login.html
@@ -24,13 +24,13 @@
                         </div>
                         
                         <div class="signin-form" id="signin-form">
-                            <form action="#">
+                            <form th:action="@{/member/login}">
                                 <div class="form-group">
                                     <div class="animate-input">
                                         <span>
                                             전화번호, 사용자 이름 또는 이메일
                                         </span>
-                                        <input type="text">
+                                        <input type="text" name="username">
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -38,16 +38,15 @@
                                         <span>
                                             비밀번호
                                         </span>
-                                        <input type="password">
+                                        <input type="password" name="password">
                                         <button>비밀번호 표시</button>
                                     </div>
                                 </div>
                                 <div class="checking">
                                     <div>존재하지 않는 회원입니다.</div>
-                                    <p th:text="${hello}">message</p>
                                 </div>
                                 <div class="btn-group">
-                                    <button type="submit" class="btn-login" id="signin-btn" disabled>
+                                    <button type="submit" class="btn-login" id="signin-btn">
                                         로그인
                                     </button>
                                 </div>
@@ -59,7 +58,7 @@
                             </div>
                             <div class="btn-group">
                                 <button class="btn-fb">
-                                    <img th:src="@{/img/facebook-icon.png}" alt="">
+                                    <img th:src="@{/img/facebook-icon.png}" alt="페이스북 이미지">
                                     <span>Facebook으로 로그인</span>
                                 </button>
                             </div>
@@ -70,7 +69,7 @@
                     <div class="box goto">
                         <p>
                             계정이 없으신가요?
-                            <a href="./register.html">가입하기</a>
+                            <a th:href="@{/member/register}">가입하기</a>
                         </p>
                     </div>
                     <div class="app-download">
