--- a/Spring/Photostagram/src/main/resources/templates/member/register.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/register.html
@@ -1,24 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photostagram::register</title>
-    <link rel="shortcut icon" href="./images/favicon.png" type="image/png">
-    <!-- 구글 폰트 -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/member.css">
-</head>
-<!--
-    날짜 : 2023/03/03
-    이름 : 김진우
-    내용 : 회원가입 화면
--->
-<body>
-<header></header>
-<!-- 본문 시작 -->
+<html  xmlns:th="http://www.thymeleaf.org"
+       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+       layout:decorate="layout/memberLayout">
+
+<th:block layout:fragment="main">
 <main class="member">
     <div class="container">
         <div class="main-container">
@@ -26,14 +11,14 @@
                 <div class="form-container">
                     <div class="form-content box">
                         <div class="logo">
-                            <img src="./images/logo_light.png" alt="Instagram logo" class="logo-light">
-                            <img src="./images/logo_dark.png" alt="Instagram logo" class="logo-dark">
+                            <img th:src="@{/img/logo_light.png}" alt="Instagram logo" class="logo-light">
+                            <img th:src="@{/img/logo_dark.png}" alt="Instagram logo" class="logo-dark">
                         </div>
                         <div class="signin-form-reg" id="signin-form">
                             <div class="btn-group">
                             <p>친구들의 사진과 동영상을 보려면 가입하세요.</p>
                             <button class="btn-fb">
-                                <img src="./images/facebook-icon.png" alt="">
+                                <img th:src="@{/img/facebook-icon.png}" alt="">
                                 <span>Facebook으로 로그인</span>
                             </button>
                             </div>
@@ -42,13 +27,13 @@
                             <div>또는</div>
                             <div></div>
                             </div>
-                            <form action="#">
+                            <form th:action="@{/member/register}" method="post">
                                 <div class="form-group">
                                     <div class="animate-input">
                                         <span>
                                             아이디 입력
                                         </span>
-                                        <input type="text">
+                                        <input type="text" name="username">
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -56,7 +41,7 @@
                                         <span>
                                             성명
                                         </span>
-                                        <input type="text">
+                                        <input type="text" name="name">
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -64,7 +49,7 @@
                                         <span>
                                             이메일 입력
                                         </span>
-                                        <input type="text">
+                                        <input type="text" name="email">
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -72,12 +57,12 @@
                                         <span>
                                             비밀번호
                                         </span>
-                                        <input type="password">
+                                        <input type="password" name="password">
                                         <button>비밀번호 표시</button>
                                     </div>
                                 </div>
                                 <div class="btn-group">
-                                    <button type="submit" class="btn-login" id="signin-btn" onclick="location.href='./birth.html'" disabled>
+                                    <button type="submit" class="btn-login" id="signin-btn">
                                         가입
                                     </button>
                                 </div>
@@ -90,48 +75,22 @@
                     <div class="box goto">
                         <p>
                             계정이 있으신가요?
-                            <a href="./login.html">로그인</a>
+                            <a th:href="@{/member/login}">로그인</a>
                         </p>
                     </div>
                     <div class="app-download">
                         <p>앱을 다운로드 하세요.</p>
                         <div class="store-link">
                             <a href="#">
-                                <img src="./images/appDownload.png" alt="app store">
+                                <img th:src="@{/img/appDownload.png}" alt="app store">
                             </a>
                             <a href="#">
-                                <img src="./images/googlePlay.png" alt="google play">
+                                <img th:src="@{/img/googlePlay.png}" alt="google play">
                             </a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
-        <div class="footer">
-            <div class="links">
-                <a href="#">Meta</a>
-                <a href="#">소개</a>
-                <a href="#">블로그</a>
-                <a href="#">채용정보</a>
-                <a href="#">도움말</a>
-                <a href="#">API</a>
-                <a href="#">개인정보처리방침</a>
-                <a href="#">약관</a>
-                <a href="#">인기 계정</a>
-                <a href="#">위치</a>
-                <a href="#">Instagram Lite</a>
-                <a href="#">연락처 업로드 & 비사용자</a>
-                <a href="#">Meta verified</a>
-                <a href="#" id="darkmode-toggle">Darkmode</a>
-            </div>
-            <div class="copyright">
-                © 2023 Instagram from Meta
-            </div>
-        </div>
-    </div>
-    </main>
-    <!-- APP JS -->
-    <script src="./js/member.js"></script>
-</body>
+</th:block>
 </html>
