--- a/Spring/Photostagram/src/main/resources/templates/member/terms.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/terms.html
@@ -1,17 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photostagram::terms</title>
-    <link rel="shortcut icon" href="./images/favicon.png" type="image/png">
-    <!-- 구글 폰트 -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/member.css">
-</head>
-<body>
+<html  xmlns:th="http://www.thymeleaf.org"
+       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+       layout:decorate="layout/memberLayout">
+<th:block layout:fragment="main">
 <main class="member">
     <div class="container">
         <div class="main-container">
@@ -35,7 +26,7 @@
                                             이용약관 3개에 모두 동의
                                         </li>
                                         <li class="checkAllBtn">
-                                            <input type="checkbox" name="chkAll" id="chk" class="chkAll">
+                                            <input type="checkbox" name="chkAll" class="chkAll">
                                         </li>
                                     </ul>
                                 </li>
@@ -46,7 +37,7 @@
                                             <a href="#">더 알아보기</a>
                                         </li>
                                         <li class="checkAllBtn">
-                                            <input type="checkbox" name="chkAll" id="chk" class="chkAll">
+                                            <input type="checkbox" name="chkAll" class="chkAll">
                                         </li>
                                     </ul>
                                 </li>
@@ -57,7 +48,7 @@
                                             <a href="#">더 알아보기</a>
                                         </li>
                                         <li class="checkAllBtn">
-                                            <input type="checkbox" name="chkAll" id="chk" class="chkAll">
+                                            <input type="checkbox" name="chkAll" class="chkAll">
                                         </li>
                                     </ul>
                                 </li>
@@ -68,7 +59,7 @@
                                             <a href="#">더 알아보기</a>
                                         </li>
                                         <li class="checkAllBtn">
-                                            <input type="checkbox" name="chkAll" id="chk" class="chkAll">
+                                            <input type="checkbox" name="chkAll" class="chkAll">
                                         </li>
                                     </ul>
                                 </li>
@@ -89,7 +80,7 @@
                     <div class="box goto">
                         <p>
                             계정이 있으신가요?
-                            <a href="./login.html">로그인</a>
+                            <a th:href="@{/member/login}">로그인</a>
                         </p>
                     </div>
 
@@ -97,40 +88,15 @@
                         <p>앱을 다운로드 하세요.</p>
                         <div class="store-link">
                             <a href="#">
-                                <img src="./images/appDownload.png" alt="app store">
+                                <img th:src="@{/img/appDownload.png}" alt="app store">
                             </a>
                             <a href="#">
-                                <img src="./images/googlePlay.png" alt="google play">
+                                <img th:src="@{/img/googlePlay.png}" alt="google play">
                             </a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="footer">
-            <div class="links">
-                <a href="#">Meta</a>
-                <a href="#">소개</a>
-                <a href="#">블로그</a>
-                <a href="#">채용정보</a>
-                <a href="#">도움말</a>
-                <a href="#">API</a>
-                <a href="#">개인정보처리방침</a>
-                <a href="#">약관</a>
-                <a href="#">인기 계정</a>
-                <a href="#">위치</a>
-                <a href="#">Instagram Lite</a>
-                <a href="#">연락처 업로드 & 비사용자</a>
-                <a href="#">Meta verified</a>
-                <a href="#" id="darkmode-toggle">Darkmode</a>
-            </div>
-            <div class="copyright">
-                © 2023 Instagram from Meta
-            </div>
-        </div>
-    </div>
-    </main>
-    <!-- APP JS -->
-    <script src="./js/member.js"></script>
-</body>
+</th:block>
 </html>
