--- a/HTML/css/chat.css
+++ b/HTML/css/chat.css
@@ -1,45 +1,46 @@
 .fullscreen{
     width: 870px;
     height: 900px;
-    background-color: antiquewhite;
     margin: 0 auto;
 }
 
 .left{
     width: 350px;
     height: 100%;
-    background-color: green;
     float: left;
+    background: #ffffff;
+    border: 1px solid #dbdbdb;
 }
 
 .right{
     width: 520px;
     height: 100%;
-    background-color: red;
     float: right;
+    background: #ffffff;
+    border: 1px solid #dbdbdb;
 }
 
 .up{
     width: auto;
     height: 60px;
-    background-color: blue;
+    
 }
 
 .src1{
-    width: 300px;
+    width: 298px;
     height: 100%;
-    background-color: aqua;
     float: left;
     text-align: center;
+    border-bottom: 1px solid #dbdbdb;
 }
 
 
 .src2{
     width: 50px;
     height: 100%;
-    background-color: bisque;
     float: right;
     position: relative;
+    border-bottom: 1px solid #dbdbdb;
 }
 
 .src2 img{
@@ -48,4 +49,34 @@
     position: absolute;
     top: 15%;
     left: 14%;
+}
+
+.down{
+    width: auto;
+    height: 100%;
+}
+
+ul{
+    list-style:none;
+    padding: 8px 20px 8px 20px;
+    }
+
+li {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: nowrap;
+    align-items: center;
+}    
+
+li img{
+    width: 50px;
+    height: 50px;
+    top: 15%;
+    left: 15%;
+    flex-direction: row;
+}
+
+p{
+    font-size: 14px;
 }
